--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
          	</div>
       	</main>
 
-		<footer class="index-footer  page-footer">
+		<footer class="page-footer">
 			<div class="footer-container  container">
 
 				<p class="footer-contacts">
