Реализация увеличения фото на главной

--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@
 			<p>Впервые на нашем сайте? <a class="sign-up-link" href="#">Зарегистрируйтесь!</a></p>
 		</div>
 
+		<div class="modal-content-photo"></div>
+
 		<div class="modal-content-map">
 			<iframe class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="766" height="560"></iframe>
 		</div>
