Изменение ссылок в footer

--- a/price.html
+++ b/price.html
@@ -103,7 +103,7 @@
 				<p class="footer-contacts">
 					Барбершоп «Borodinski»<br>
 					Адрес: Санкт-Петербург, Б. Конюшенная, 19/8<br>
-					<a class="map-link" href="contacts.html#map">Как нас найти?</a><br>
+					<a class="map-link" href="contacts.html#map" title="Открыть карту">Как нас найти?</a><br>
 					Телефон: <a href="tel:+78125555555">+7 (812) 555-55-55</a>
 				</p>
 
@@ -115,7 +115,7 @@
 				</div>
 
 				<p class="footer-copyright">
-					<a href="mailto:arkartavtsev@live.ru">Артём Картавцев</a> для <a class="copyright-btn  btn" href="https://htmlacademy.ru" target="_blank">HTML Academy</a>
+					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Артём Картавцев</a> для <a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
 				</p>
 
 			</div>
