Доработка формы входа

--- a/shop.html
+++ b/shop.html
@@ -207,7 +207,7 @@
 		<div class="modal-content-form">
 			<h1 class="inner-title">Личный кабинет</h1>
 			<p>Введите логин и пароль</p>
-			<form class="login-form" action="index.html" method="post">
+			<form class="login-form" action="shop.html" method="post">
 				<label for="login-field" class="visually-hidden">Логин</label>
 				<input id="login-field" class="login-field  login-form-field  form-field" type="text" name="login" placeholder="Логин">
 
