--- a/login.html
+++ b/login.html
@@ -49,7 +49,7 @@
 	        <div class="login-content">
 	            <h1 class="inner-title">Личный кабинет</h1>
 	            <p>Введите логин и пароль</p>
-				<form class="login-form" action="index.html" method="post">
+				<form class="login-form" action="login.html" method="post">
 					<label for="login-field" class="visually-hidden">Логин</label>
 					<input id="login-field" class="login-field  form-field" type="text" name="login" placeholder="Логин" required>
 
