Незначительные изменения стр магазина

--- a/shop.html
+++ b/shop.html
@@ -76,6 +76,11 @@
 		                        <span class="checkbox-replacer"></span>
 		                        American Crew
 	                     	</label>
+							<label class="checkbox-field">
+		                        <input class="custom-checkbox  visually-hidden" type="checkbox" name="vendor-all" checked>
+		                        <span class="checkbox-replacer"></span>
+		                        Все
+	                     	</label>
 	                  	</fieldset>
 
 	                  	<fieldset>
@@ -94,6 +99,11 @@
 		                        <input class="custom-radio-btn  visually-hidden" type="radio" name="goods-type" value="accessories">
 		                        <span class="radio-replacer"></span>
 		                        Аксессуары
+	                     	</label>
+							<label class="radio-btn-field">
+		                        <input class="custom-radio-btn  visually-hidden" type="radio" name="goods-type" value="all" checked>
+		                        <span class="radio-replacer"></span>
+		                        Все
 	                     	</label>
 	                  	</fieldset>
 
