--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
    	<head>
       	<meta charset="utf-8">
-      	<title>Barbershop «Borodinski»</title>
+      	<title>Barbershop «POLY-Barber»</title>
       	<link rel="stylesheet" href="css/styles.css">
       	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
       	<link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96">
@@ -30,9 +30,9 @@
                		<li class="main-nav-item">
 						<a class="nav-item-link" href="shop.html">Магазин</a>
 					</li>
-               		<li class="main-nav-item">
-						<a class="nav-item-link" href="contacts.html">Контакты</a>
-					</li>
+                        <li class="main-nav-item">
+                                               <a class="nav-item-link" href="contacts.html">Контакты</a>
+                                        </li>
             	</ul>
 
             	<ul class="user-menu">
@@ -47,8 +47,8 @@
       	<main class="index-main  page-main">
          	<div class="container">
 
-	               	<h1 class="visually-hidden">Барбершоп «Borodinski»</h1>
-	               	<img class="index-logo" src="img/index-logo.png" width="368" height="153" alt="Барбершоп «Borodinski»">
+	               	<h1 class="visually-hidden">Барбершоп «POLY-Barber»</h1>
+	               	<img class="index-logo" src="img/index-logo.png" width="368" height="153" alt="Барбершоп «POLY-Barber»">
 
 	               	<section class="index-features">
 	                  	<h2 class="visually-hidden">Наши преимущества</h2>
@@ -116,9 +116,9 @@
 	               	<section class="index-contacts">
 	                  	<h2 class="index-content-title">Контактная информация</h2>
 	                  	<p>
-	                     	Барбершоп «Borodinski»<br>
-	                     	Адрес: Санкт-Петербург, Б. Конюшенная, 19/8<br>
-	                     	Телефон: <a href="tel:+78125555555">+7 (812) 555-55-55</a>
+	                     	Барбершоп «POLY-Barber»<br>
+	                     	Адрес: Санкт-Петербург, ПОЛИТЕХ<br>
+	                     	Телефон: <a href="tel:+78127777777">+7 (812) 777-77-77</a>
 	                  	</p>
 	                  	<p>
 	                     	Время работы:<br>
@@ -166,10 +166,10 @@
 			<div class="footer-container  container">
 
 				<p class="footer-contacts">
-					Барбершоп «Borodinski»<br>
-					Адрес: Санкт-Петербург, Б. Конюшенная, 19/8<br>
-					<a class="map-link" href="contacts.html#map" title="Открыть карту">Как нас найти?</a><br>
-					Телефон: <a href="tel:+78125555555">+7 (812) 555-55-55</a>
+					Барбершоп «POLY-Barber»<br>
+					Адрес: Санкт-Петербург Политех<br>
+					<a class="map-link" href="#" title="Открыть карту">Как нас найти?</a><br>
+					Телефон: <a href="tel:+78127777777">+7 (812) 777-77-77</a>
 				</p>
 
 				<div class="footer-social">
@@ -180,7 +180,7 @@
 				</div>
 
 				<p class="footer-copyright">
-					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Артём Картавцев</a> для <a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
+					<a href="https://github.com/corbon95" title="Открыть GitHub" target="_blank">Михайлов Алексей</a> для SEO и:<a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
 				</p>
 
 			</div>
@@ -217,7 +217,7 @@
 		<div class="modal-content-photo"></div>
 
 		<div class="modal-content-map">
-			<iframe class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="766" height="560"></iframe>
+	<!--		<iframe class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="766" height="560"></iframe>    -->
 		</div>
 
 		<script type="text/javascript" src="js/scripts.js"></script>
