--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
 
    	<head>
       	<meta charset="utf-8">
-      	<title>Контакты — Borodinski</title>
+      	<title>Контакты — POLY-Barber</title>
       	<link rel="stylesheet" href="css/styles.css">
       	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
       	<link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96">
@@ -18,7 +18,7 @@
          	<nav class="nav-bar  container">
 
 				<a class="inner-logo" href="index.html" title="Вернуться на главную">
-					<img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Borodinski">
+					<img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «POLY-Barber">
 				</a>
 
 				<ul class="main-nav">
@@ -73,13 +73,13 @@
                		<h2 class="inner-content-title">Как нас найти:</h2>
                		<p>
                   		Мы ждём Вас по адресу:<br>
-                  		г. Санкт-Петербург, ул. Большая Конюшенная, д. 19/8
+                  		г. Санкт-Петербург, ПОЛИТЕХ
                		</p>
                		<p>
                   		Телефон для записи:<br>
-                  		<a href="tel:+78125555555">+7 (812) 555-55-55</a>
+                  		<a href="tel:+78127777777">+7 (812) 777-77-77</a>
                		</p>
-               		<iframe id="map" class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="940" height="500"></iframe>
+<!--               		<iframe id="map" class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="940" height="500"></iframe>     -->
             	</section>
 
          	</div>
@@ -89,10 +89,10 @@
 			<div class="footer-container  container">
 
 				<p class="footer-contacts">
-					Барбершоп «Borodinski»<br>
-					Адрес: Санкт-Петербург, Б. Конюшенная, 19/8<br>
+					Барбершоп «POLY-Barber»<br>
+					Адрес: Санкт-Петербург, ПОЛИТЕХ<br>
 					<a class="map-link" href="contacts.html#map" title="Открыть карту">Как нас найти?</a><br>
-					Телефон: <a href="tel:+78125555555">+7 (812) 555-55-55</a>
+					Телефон: <a href="tel:+78127777777">+7 (812) 777-77-77</a>
 				</p>
 
 				<div class="footer-social">
@@ -103,7 +103,7 @@
 				</div>
 
 				<p class="footer-copyright">
-					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Артём Картавцев</a> для <a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
+					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Михайлов Алексей</a> для SEO и:<a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
 				</p>
 
 			</div>
@@ -138,7 +138,7 @@
 		</div>
 
 		<div class="modal-content-map">
-			<iframe class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="766" height="560"></iframe>
+	<!--		<iframe class="location-map" src="https://yandex.ru/map-widget/v1/-/CBQJiVTrHC" width="766" height="560"></iframe>   -->
 		</div>
 
 		<script type="text/javascript" src="js/scripts.js"></script>
