--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
    	<head>
       	<meta charset="utf-8">
-      	<title>Вход — Borodinski</title>
+      	<title>Вход — POLY-Barber</title>
       	<link rel="stylesheet" href="css/styles.css">
       	<link rel="shortcut icon" href="img/favicon.ico" type="image/vnd.microsoft.icon">
       	<link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96">
@@ -18,7 +18,7 @@
          	<nav class="nav-bar  container">
 
 				<a class="inner-logo" href="index.html" title="Вернуться на главную">
-					<img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «Borodinski">
+					<img src="img/inner-logo.png" width="111" height="24" alt="Барбершоп «POLY-Barber">
 				</a>
 
 				<ul class="main-nav">
@@ -77,10 +77,10 @@
 			<div class="footer-container  container">
 
 				<p class="footer-contacts">
-					Барбершоп «Borodinski»<br>
-					Адрес: Санкт-Петербург, Б. Конюшенная, 19/8<br>
+					Барбершоп «POLY-Barber»<br>
+					Адрес: Санкт-Петербург, ПОЛИТЕХ<br>
 					<a class="map-link" href="contacts.html#map" title="Открыть карту">Как нас найти?</a><br>
-					Телефон: <a href="tel:+78125555555">+7 (812) 555-55-55</a>
+					Телефон: <a href="tel:+78127777777">+7 (812) 777-77-77</a>
 				</p>
 
 				<div class="footer-social">
@@ -91,7 +91,7 @@
 				</div>
 
 				<p class="footer-copyright">
-					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Артём Картавцев</a> для <a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
+					<a href="https://github.com/arkartavtsev" title="Открыть GitHub" target="_blank">Михайлов Алексей</a> для SEO и: <a class="copyright-btn  btn" href="https://htmlacademy.ru" title="Переход на внешний ресурс" target="_blank">HTML Academy</a>
 				</p>
 
 			</div>
